...
          </View>

          <ThemedText
            type="title"
            style={{ textAlign: "center", marginTop: 20 }}
          >
            Thank You!
          </ThemedText>

          <ThemedText
            style={{
              textAlign: "center",
              opacity: 0.7,
...
            style={{ marginTop: 32 }}
          >
            <View
              style={[styles.continueButton, { backgroundColor: accentColor }]}
            >
              <ThemedText style={styles.buttonText}>
                Continue Shopping
              </ThemedText>
            </View>
          </Pressable>
        </Animated.View>
      </ScrollView>
    </SafeAreaView>
...
