...
        data={products}
        keyExtractor={(item) => String(item.id)}
        numColumns={2}
        columnWrapperStyle={styles.row}
        testID={
          loaded && products && products.length > 0
            ? "products-loaded"
            : undefined
        }
        renderItem={({ item, index }) => {
          return (
            <Animated.View
              entering={FadeInDown.delay(
...
